KubeLB CCM integration (#12667)
* Add seed level resources for KubeLB

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Introduce KubeLB settings for clusters

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Resource reconciliation for kubelb on seed cluster

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Add user cluster level resources for KubeLB

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Resource reconciliation for kubelb on user cluster

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Ensure that KubeLB image is included in the mirror-images

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* KubeLB controller is a EE only feature

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Fix linting errors

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Implement resource management for management and seed cluster

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Create RBAC for kubelb in the user cluster

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Minor fixes

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Add cleanup for kubelb

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Pin kubelb to latest image

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Remove kubelb from mirror-images

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Fix boilerplate

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Fix kubeLB casing

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Remove omitempty from cluster.spec.kubelb.enabled

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Handle PR feedback

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gm

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -207,6 +207,42 @@ spec:
                               - datacenter
                               - network
                             type: object
+                          kubeLb:
+                            description: 'Optional: KubeLB holds the configuration for the kubeLB at the data center level.'
+                            properties:
+                              enabled:
+                                description: Enabled is used to enable/disable kubeLB for the datacenter. This is used to control whether installing kubeLB is allowed or not for the datacenter.
+                                type: boolean
+                              kubeconfig:
+                                description: Kubeconfig is reference to the Kubeconfig for the kubeLB management cluster.
+                                properties:
+                                  apiVersion:
+                                    description: API version of the referent.
+                                    type: string
+                                  fieldPath:
+                                    description: 'If referring to a piece of an object instead of an entire object, this string should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2]. For example, if the object reference is to a container within a pod, this would take on a value like: "spec.containers{name}" (where "name" refers to the name of the container that triggered the event) or if no container name is specified "spec.containers[2]" (container with index 2 in this pod). This syntax is chosen only to have some well-defined way of referencing a part of an object. TODO: this design is not final and this field is subject to change in the future.'
+                                    type: string
+                                  kind:
+                                    description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                                    type: string
+                                  namespace:
+                                    description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                                    type: string
+                                  resourceVersion:
+                                    description: 'Specific resourceVersion to which this reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                                    type: string
+                                  uid:
+                                    description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                                    type: string
+                                type: object
+                                x-kubernetes-map-type: atomic
+                            required:
+                              - enabled
+                              - kubeconfig
+                            type: object
                           kubevirt:
                             description: Kubevirt configures a KubeVirt datacenter.
                             properties:
@@ -1366,6 +1402,38 @@ spec:
                     - LoadBalancer
                     - Tunneling
                   type: string
+                kubeLb:
+                  description: KubeLB holds the configuration for the kubeLB at the Seed level. This component is responsible for managing load balancers.
+                  properties:
+                    kubeconfig:
+                      description: Kubeconfig is reference to the Kubeconfig for the kubeLB management cluster.
+                      properties:
+                        apiVersion:
+                          description: API version of the referent.
+                          type: string
+                        fieldPath:
+                          description: 'If referring to a piece of an object instead of an entire object, this string should contain a valid JSON/Go field access statement, such as desiredState.manifest.containers[2]. For example, if the object reference is to a container within a pod, this would take on a value like: "spec.containers{name}" (where "name" refers to the name of the container that triggered the event) or if no container name is specified "spec.containers[2]" (container with index 2 in this pod). This syntax is chosen only to have some well-defined way of referencing a part of an object. TODO: this design is not final and this field is subject to change in the future.'
+                          type: string
+                        kind:
+                          description: 'Kind of the referent. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                          type: string
+                        name:
+                          description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                          type: string
+                        namespace:
+                          description: 'Namespace of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/'
+                          type: string
+                        resourceVersion:
+                          description: 'Specific resourceVersion to which this reference is made, if any. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency'
+                          type: string
+                        uid:
+                          description: 'UID of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#uids'
+                          type: string
+                      type: object
+                      x-kubernetes-map-type: atomic
+                  required:
+                    - kubeconfig
+                  type: object
                 kubeconfig:
                   description: A reference to the Kubeconfig of this cluster. The Kubeconfig must have cluster-admin privileges. This field is mandatory for every seed, even if there are no datacenters defined yet.
                   properties:
