--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -96,6 +96,9 @@ spec:
                           x-kubernetes-int-or-string: true
                       type: object
                   type: object
+                disableAdminKubeconfig:
+                  description: DisableAdminKubeconfig disables the admin kubeconfig functionality on the dashboard.
+                  type: boolean
                 displayAPIDocs:
                   description: DisplayDemoInfo controls whether a a link to the KKP API documentation is shown in the footer.
                   type: boolean
