Support for enforcing KubeLB
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -2233,6 +2233,12 @@ spec:
                         - HealthStatusUp
                         - HealthStatusProvisioning
                       type: string
+                    kubeLb:
+                      enum:
+                        - HealthStatusDown
+                        - HealthStatusUp
+                        - HealthStatusProvisioning
+                      type: string
                     kubernetesDashboard:
                       enum:
                         - HealthStatusDown
