--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1792,8 +1792,8 @@ spec:
                       type: string
                   type: object
                   x-kubernetes-map-type: atomic
-                kubeLb:
-                  description: KubeLB holds the configuration for the kubeLB component.
+                kubelb:
+                  description: KubeLB holds the configuration for the kubeLB component. Only available in Enterprise Edition.
                   properties:
                     enabled:
                       description: Controls whether kubeLB is deployed or not.
