Deprecate OpenVPN CRD fields

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -2253,6 +2253,7 @@ spec:
                         - HealthStatusProvisioning
                       type: string
                     openvpn:
+                      description: 'Deprecated: OpenVPN will be removed entirely in the future.'
                       enum:
                         - HealthStatusDown
                         - HealthStatusUp
