--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1016,7 +1016,7 @@ spec:
                           type: boolean
                       type: object
                     konnectivityEnabled:
-                      description: KonnectivityEnabled enables konnectivity for controlplane to node network communication.
+                      description: 'KonnectivityEnabled enables konnectivity for controlplane to node network communication. Deprecated: As OpenVPN will be removed in the future, clusters with konnectivity disabled will not be supported.'
                       type: boolean
                     nodeCidrMaskSizeIPv4:
                       description: NodeCIDRMaskSizeIPv4 is the mask size used to address the nodes within provided IPv4 Pods CIDR. It has to be larger than the provided IPv4 Pods CIDR. Defaults to 24.
