Update curl to 8.4.0 in charts/mla/grafana and util image
Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/hack/images/util/Dockerfile
+++ b/hack/images/util/Dockerfile
@@ -24,7 +24,7 @@ ENV MC_VERSION=RELEASE.2022-12-24T15-21-38Z \
 RUN apk add --no-cache -U \
     bash \
     ca-certificates \
-    curl \
+    'curl>=8.4.0-r0' \ # ensure that we install a curl version that fixes CVE-2023-38545 and CVE-2023-38546.
     git \
     iproute2 \
     iptables \
