--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -35,10 +35,10 @@ spec:
                 aks:
                   properties:
                     clientID:
-                      description: ClientID is the service principal used to access Azure.
+                      description: The service principal used to access Azure.
                       type: string
                     clientSecret:
-                      description: ClientSecret is the client secret corresponding to the given service principal.
+                      description: The client secret corresponding to the given service principal.
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -47,10 +47,10 @@ spec:
                       description: Only enabled presets will be available in the KKP dashboard.
                       type: boolean
                     subscriptionID:
-                      description: SubscriptionID is the Azure Subscription used for the user cluster.
+                      description: The Azure Subscription used for the user cluster.
                       type: string
                     tenantID:
-                      description: TenantID is the Azure Active Directory Tenant used for the user cluster.
+                      description: The Azure Active Directory Tenant used for the user cluster.
                       type: string
                   required:
                     - clientID
@@ -61,10 +61,10 @@ spec:
                 alibaba:
                   properties:
                     accessKeyID:
-                      description: AccessKeyID is the Access Key ID used to authenticate against Alibaba.
+                      description: The Access Key ID used to authenticate against Alibaba.
                       type: string
                     accessKeySecret:
-                      description: AccessKeySecret is the Access Key Secret used to authenticate against Alibaba.
+                      description: The Access Key Secret used to authenticate against Alibaba.
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -93,13 +93,13 @@ spec:
                 aws:
                   properties:
                     accessKeyID:
-                      description: AccessKeyID is the AWS Access key ID used to authenticate against AWS.
+                      description: The Access key ID used to authenticate against AWS.
                       type: string
                     assumeRoleARN:
-                      description: 'AssumeRoleARN defines the ARN for an IAM role that should be assumed when handling resources on AWS. It will be used to acquire temporary security credentials using an STS AssumeRole API operation whenever creating an AWS session. required: false'
+                      description: 'Defines the ARN for an IAM role that should be assumed when handling resources on AWS. It will be used to acquire temporary security credentials using an STS AssumeRole API operation whenever creating an AWS session. required: false'
                       type: string
                     assumeRoleExternalID:
-                      description: 'AssumeRoleExternalID is an arbitrary string that may be needed when calling the STS AssumeRole API operation. Using an external ID can help to prevent the "confused deputy problem". required: false'
+                      description: 'An arbitrary string that may be needed when calling the STS AssumeRole API operation. Using an external ID can help to prevent the "confused deputy problem". required: false'
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -117,7 +117,7 @@ spec:
                       description: Route table to use. This can be configured, but if left empty will be automatically filled in during reconciliation.
                       type: string
                     secretAccessKey:
-                      description: SecretAccessKey is the AWS Secret Access Key used to authenticate against AWS.
+                      description: The Secret Access Key used to authenticate against AWS.
                       type: string
                     securityGroupID:
                       description: Security group to use. This can be configured, but if left empty will be automatically filled in during reconciliation.
@@ -132,10 +132,10 @@ spec:
                 azure:
                   properties:
                     clientID:
-                      description: ClientID is the service principal used to access Azure.
+                      description: The service principal used to access Azure.
                       type: string
                     clientSecret:
-                      description: ClientSecret is the client secret corresponding to the given service principal.
+                      description: The client secret corresponding to the given service principal.
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -150,28 +150,28 @@ spec:
                         - basic
                       type: string
                     resourceGroup:
-                      description: ResourceGroup is the resource group that will be used to look up and create resources for the cluster in. If set to empty string at cluster creation, a new resource group will be created and this field will be updated to the generated resource group's name.
+                      description: The resource group that will be used to look up and create resources for the cluster in. If set to empty string at cluster creation, a new resource group will be created and this field will be updated to the generated resource group's name.
                       type: string
                     routeTable:
-                      description: RouteTableName is the name of a route table associated with the subnet referenced by `subnet`. If set to empty string at cluster creation, a new route table will be created and this field will be updated to the generated route table's name. If no subnet is defined at cluster creation, this field should be empty as well.
+                      description: The name of a route table associated with the subnet referenced by `subnet`. If set to empty string at cluster creation, a new route table will be created and this field will be updated to the generated route table's name. If no subnet is defined at cluster creation, this field should be empty as well.
                       type: string
                     securityGroup:
-                      description: SecurityGroup is the name of a security group associated with the subnet referenced by `subnet`. If set to empty string at cluster creation, a new security group will be created and this field will be updated to the generated security group's name. If no subnet is defined at cluster creation, this field should be empty as well.
+                      description: The name of a security group associated with the subnet referenced by `subnet`. If set to empty string at cluster creation, a new security group will be created and this field will be updated to the generated security group's name. If no subnet is defined at cluster creation, this field should be empty as well.
                       type: string
                     subnet:
-                      description: SubnetName is the name of a subnet in the VNet referenced by `vnet`. If set to empty string at cluster creation, a new subnet will be created and this field will be updated to the generated subnet's name. If no VNet is defined at cluster creation, this field should be empty as well.
+                      description: The name of a subnet in the VNet referenced by `vnet`. If set to empty string at cluster creation, a new subnet will be created and this field will be updated to the generated subnet's name. If no VNet is defined at cluster creation, this field should be empty as well.
                       type: string
                     subscriptionID:
-                      description: SubscriptionID is the Azure Subscription used for the user cluster.
+                      description: The Azure Subscription used for the user cluster.
                       type: string
                     tenantID:
-                      description: TenantID is the Azure Active Directory Tenant used for the user cluster.
+                      description: The Azure Active Directory Tenant used for the user cluster.
                       type: string
                     vnet:
-                      description: VNetName is the name of the VNet resource used for setting up networking in. If set to empty string at cluster creation, a new VNet will be created and this field will be updated to the generated VNet's name.
+                      description: The name of the VNet resource used for setting up networking in. If set to empty string at cluster creation, a new VNet will be created and this field will be updated to the generated VNet's name.
                       type: string
                     vnetResourceGroup:
-                      description: 'Optional: VNetResourceGroup optionally defines a second resource group that will be used for VNet related resources instead. If left empty, NO additional resource group will be created and all VNet related resources use the resource group defined by `resourceGroup`.'
+                      description: 'Optional: Defines a second resource group that will be used for VNet related resources instead. If left empty, NO additional resource group will be created and all VNet related resources use the resource group defined by `resourceGroup`.'
                       type: string
                   required:
                     - clientID
@@ -197,13 +197,13 @@ spec:
                 eks:
                   properties:
                     accessKeyID:
-                      description: AccessKeyID is the AWS Access key ID used to authenticate against AWS.
+                      description: The Access key ID used to authenticate against AWS.
                       type: string
                     assumeRoleARN:
-                      description: 'AssumeRoleARN defines the ARN for an IAM role that should be assumed when handling resources on AWS. It will be used to acquire temporary security credentials using an STS AssumeRole API operation whenever creating an AWS session. required: false'
+                      description: 'Defines the ARN for an IAM role that should be assumed when handling resources on AWS. It will be used to acquire temporary security credentials using an STS AssumeRole API operation whenever creating an AWS session. required: false'
                       type: string
                     assumeRoleExternalID:
-                      description: 'AssumeRoleExternalID is an arbitrary string that may be needed when calling the STS AssumeRole API operation. Using an external ID can help to prevent the "confused deputy problem". required: false'
+                      description: 'An arbitrary string that may be needed when calling the STS AssumeRole API operation. Using an external ID can help to prevent the "confused deputy problem". required: false'
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -212,7 +212,7 @@ spec:
                       description: Only enabled presets will be available in the KKP dashboard.
                       type: boolean
                     secretAccessKey:
-                      description: SecretAccessKey is the AWS Secret Access Key used to authenticate against AWS.
+                      description: The Secret Access Key used to authenticate against AWS.
                       type: string
                   required:
                     - accessKeyID
@@ -299,7 +299,7 @@ spec:
                 nutanix:
                   properties:
                     clusterName:
-                      description: ClusterName is the Nutanix cluster to deploy resources and nodes to.
+                      description: The name of the Nutanix cluster to which the resources and nodes are deployed to.
                       type: string
                     csiEndpoint:
                       description: CSIEndpoint to access Nutanix Prism Element for csi driver
@@ -321,16 +321,16 @@ spec:
                       description: Only enabled presets will be available in the KKP dashboard.
                       type: boolean
                     password:
-                      description: Password is the password corresponding to the provided user.
+                      description: Password corresponding to the provided user.
                       type: string
                     projectName:
-                      description: ProjectName is the optional Nutanix project to use. If none is given, no project will be used.
+                      description: 'Optional: Nutanix project to use. If none is given, no project will be used.'
                       type: string
                     proxyURL:
-                      description: ProxyURL is used to optionally configure a HTTP proxy to access Nutanix Prism Central.
+                      description: 'Optional: To configure a HTTP proxy to access Nutanix Prism Central.'
                       type: string
                     username:
-                      description: Username is the username to access the Nutanix Prism Central API.
+                      description: Username that is used to access the Nutanix Prism Central API.
                       type: string
                   required:
                     - clusterName
@@ -409,7 +409,7 @@ spec:
                 vmwareclouddirector:
                   properties:
                     apiToken:
-                      description: APIToken is the VMware Cloud Director API token.
+                      description: The VMware Cloud Director API token.
                       type: string
                     datacenter:
                       description: If datacenter is set, this preset is only applicable to the configured datacenter.
@@ -418,19 +418,19 @@ spec:
                       description: Only enabled presets will be available in the KKP dashboard.
                       type: boolean
                     organization:
-                      description: Organization is the name of organization to use.
+                      description: The name of organization to use.
                       type: string
                     ovdcNetwork:
-                      description: OVDCNetwork is the name of organizational virtual data center network that will be associated with the VMs and vApp.
+                      description: The name of organizational virtual data center network that will be associated with the VMs and vApp.
                       type: string
                     password:
-                      description: Password is the VMware Cloud Director user password.
+                      description: The VMware Cloud Director user password.
                       type: string
                     username:
-                      description: Username is the VMware Cloud Director user name.
+                      description: The VMware Cloud Director user name.
                       type: string
                     vdc:
-                      description: VDC is the organizational virtual data center.
+                      description: The organizational virtual data center.
                       type: string
                   required:
                     - organization
@@ -455,18 +455,18 @@ spec:
                       description: Only enabled presets will be available in the KKP dashboard.
                       type: boolean
                     networks:
-                      description: Networks is the list of vSphere networks.
+                      description: List of vSphere networks.
                       items:
                         type: string
                       type: array
                     password:
-                      description: Password is the vSphere user password.
+                      description: The vSphere user password.
                       type: string
                     resourcePool:
                       description: ResourcePool is used to manage resources such as cpu and memory for vSphere virtual machines. The resource pool should be defined on vSphere cluster level.
                       type: string
                     username:
-                      description: Username is the vSphere user name.
+                      description: The vSphere user name.
                       type: string
                     vmNetName:
                       description: 'Deprecated: Use networks instead.'
