--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -150,7 +150,7 @@ spec:
                             description: BringYourOwn contains settings for clusters using manually created nodes via kubeadm.
                             type: object
                           digitalocean:
-                            description: DatacenterSpecDigitalocean describes a DigitalOcean datacenter.
+                            description: Digitalocean configures a Digitalocean datacenter.
                             properties:
                               region:
                                 description: Datacenter location, e.g. "ams3". A list of existing datacenters can be found at https://www.digitalocean.com/docs/platform/availability-matrix/
@@ -653,8 +653,10 @@ spec:
                             description: Openstack configures an Openstack datacenter.
                             properties:
                               authURL:
+                                description: Authentication URL
                                 type: string
                               availabilityZone:
+                                description: Used to make resources highly available
                                 type: string
                               dnsServers:
                                 description: Used for automatic network creation
@@ -694,6 +696,7 @@ spec:
                                     type: integer
                                 type: object
                               region:
+                                description: Authentication region name
                                 type: string
                               trustDevicePath:
                                 description: 'Optional: Gets mapped to the "trust-device-path" setting in the cloud config. This setting defaults to false.'
