Add basePath configuration option for vSphere clusters and presets (#12668)
* Add basePath field to vSphere preset and cloud spec

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Update codegen

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Improve field description

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* log clusterFolder instead of potentially empty spec field

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* pass SCENARIO_OPTIONS to conformance-tester flag

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

* Add 'basepath' scenario for conformance-tester and e2e jobs

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

---------

Signed-off-by: Marvin Beckers <marvin@kubermatic.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -908,6 +908,9 @@ spec:
                     vsphere:
                       description: VSphereCloudSpec specifies access data to VSphere cloud.
                       properties:
+                        basePath:
+                          description: 'Optional: BasePath configures a vCenter folder path that KKP will create an individual cluster folder in. If it''s an absolute path, the RootPath configured in the datacenter will be ignored. If it is a relative path, the BasePath part will be appended to the RootPath (if set) to construct the full path.'
+                          type: string
                         credentialsReference:
                           description: GlobalObjectKeySelector is needed as we can not use v1.SecretKeySelector because it is not cross namespace.
                           properties:
